--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Karan Prajapati's Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Canva SDKs -->
-    <script src="/_sdk/element_sdk.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <style>
         * {
             margin: 0;
@@ -674,7 +674,7 @@
             navigation: auto;
         }
     </style>
-    <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
+    
     <script src="https://cdn.tailwindcss.com" type="text/javascript"></script>
 </head>
 
@@ -1627,5 +1627,6 @@
     </script>
     <script>(function () { function c() { var b = a.contentDocument || a.contentWindow.document; if (b) { var d = b.createElement('script'); d.innerHTML = "window.__CF$cv$params={r:'9a16d0c880679a93',t:'MTc2MzYyOTg0MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);"; b.getElementsByTagName('head')[0].appendChild(d) } } if (document.body) { var a = document.createElement('iframe'); a.height = 1; a.width = 1; a.style.position = 'absolute'; a.style.top = 0; a.style.left = 0; a.style.border = 'none'; a.style.visibility = 'hidden'; document.body.appendChild(a); if ('loading' !== document.readyState) c(); else if (window.addEventListener) document.addEventListener('DOMContentLoaded', c); else { var e = document.onreadystatechange || function () { }; document.onreadystatechange = function (b) { e(b); 'loading' !== document.readyState && (document.onreadystatechange = e, c()) } } } })();</script>
 </body>
+
 
 </html>
