Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     data-page="home" aria-label="Go to home">
 
                     <div class="w-8 h-8 sm:w-10 sm:h-10 rounded-full bg-[#38bdf8] flex items-center justify-center overflow-hidden" aria-hidden="true">
-    <img src="klog3.png" alt="logo" class="w-full h-full object-cover">
+    <img src="logo3.png" alt="logo" class="w-full h-full object-cover">
 </div>
 
                     <span id="nav-name" class="hidden sm:inline text-sm sm:text-base font-semibold tracking-wide">
@@ -1630,5 +1630,6 @@
 
 
 </html>
+
 
 
